src/snapshots/gpui_markup__codegen__tests__canvas.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { <canvas w={px(100.0)} h={px(100.0)}/> })"
---
canvas () . w (px (100.0)) . h (px (100.0))
