src/snapshots/gpui_markup__codegen__tests__complex_nested.snap
---
source: src/codegen.rs
expression: "generate(quote::quote!\n{\n    div [flex, flex_col]\n    {\n        div [text_size: px(16.0)] { \"Hello World\", }, div\n        [bg: theme.secondary] { (Header::new()), },\n    }\n})"
---
fn __wrapper() {
    {
        fn __assert_parent_element<T: gpui::ParentElement>() {}
        __assert_parent_element::<gpui::Div>();
        div().flex().flex_col()
    }
        .child(
            {
                fn __assert_parent_element<T: gpui::ParentElement>() {}
                __assert_parent_element::<gpui::Div>();
                div().text_size(px(16.0))
            }
                .child("Hello World"),
        )
        .child(
            {
                fn __assert_parent_element<T: gpui::ParentElement>() {}
                __assert_parent_element::<gpui::Div>();
                div().bg(theme.secondary)
            }
                .child((Header::new())),
        )
}
