src/snapshots/gpui_markup__codegen__tests__component_nested.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div { Header [flex], Footer {}, } })"
---
fn __wrapper() {
    {
        fn __assert_parent_element<T: gpui::ParentElement>() {}
        __assert_parent_element::<gpui::Div>();
        div()
    }
        .child(Header::new().flex())
        .child(Footer::new())
}
