src/snapshots/gpui_markup__codegen__tests__component_with_attrs.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { Header [flex, style: Primary] })"
---
fn __wrapper() {
    Header::new().flex().style(Primary)
}
