src/snapshots/gpui_markup__codegen__tests__component_with_children.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { <Container> <div>{\"Content\"}</div> </Container> })"
---
{ # [allow (path_statements)] Container ; Container :: new () } . child ({ # [allow (path_statements)] div ; div () } . child ("Content"))
