src/snapshots/gpui_markup__codegen__tests__deferred.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { deferred { div { \"Deferred content\" }, } })"
---
fn __wrapper() {
    deferred(
        ({
            fn __assert_parent_element<T: gpui::ParentElement>() {}
            __assert_parent_element::<gpui::Div>();
            div()
        }
            .child("Deferred content"))
            .into_any_element(),
    )
}
