src/snapshots/gpui_markup__codegen__tests__div_with_element_children.snap
---
source: src/codegen.rs
expression: "generate(quote::quote!\n{ <div> <div>{\"First\"}</div> <div>{\"Second\"}</div> </div> })"
---
{ # [allow (path_statements)] div ; div () } . children ([({ # [allow (path_statements)] div ; div () } . child ("First")) . into_any_element () , ({ # [allow (path_statements)] div ; div () } . child ("Second")) . into_any_element ()])
