src/snapshots/gpui_markup__codegen__tests__div_with_multiple_children.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div { \"First\", \"Second\", } })"
---
fn __wrapper() {
    {
        fn __assert_parent_element<T: gpui::ParentElement>() {}
        __assert_parent_element::<gpui::Div>();
        div()
    }
        .child("First")
        .child("Second")
}
