src/snapshots/gpui_markup__codegen__tests__div_with_single_child.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { <div>{\"Hello\"}</div> })"
---
{ # [allow (path_statements)] div ; div () } . child ("Hello")
