src/snapshots/gpui_markup__codegen__tests__img.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { <img src={image_source}/> })"
---
img () . src (image_source)
